Implement blur function
