# docs/swagger.yaml
@@ -45,6 +45,10 @@ paths:
         name: filter
         required: true
         type: string
+      - description: Blur radius (applicable only for 'blur' filter)
+        in: query
+        name: radius
+        type: integer
       responses:
         "200":
           description: Filtered image
